chore: add cloudflare analytics snippet

--- a/src/pages/pe/concursos/index.astro
+++ b/src/pages/pe/concursos/index.astro
@@ -65,6 +65,19 @@ import AdPlaceholder from "@/components/AdPlaceholder.astro";
             <td>Olinda</td>
             <td>25/01/2026</td>
         </tr>
+        <tr>
+          <td>
+            <a
+              href="/pe/concursos/nivel-superior/saude/area-medica-ebserh-pe/2025-edital-02-ebserh"
+            >
+              EBSERH — Área Médica (Cadastro Reserva)
+            </a>
+          </td>
+          <td>Várias Especialidades Médicas</td>
+          <td>Superior</td>
+          <td>Petrolina e Recife</td>
+          <td>30/01/2026</td>
+        </tr>
         </tbody>
     </table>
     </section>
