--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,6 +7,7 @@
 		<meta name="generator" content={Astro.generator} />
 		<link rel="stylesheet" href="/src/styles/global.css" />
 		<title>Astro Basics</title>
+		<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "6a037ce0da364567be9248c28903c24e"}'></script><!-- End Cloudflare Web Analytics -->
 	</head>
 	<body>
 		<slot />
