feat: adiciona segundo mestrado na tabela

--- a/src/pages/pe/index.astro
+++ b/src/pages/pe/index.astro
@@ -23,6 +23,14 @@ import AdPlaceholder from "@/components/AdPlaceholder.astro";
       </li>
     </ul>
 
+    <ul>
+      <li>
+        <a href="/pe/pos-graduacoes">
+          Pós-Graduações
+        </a>
+      </li>
+    </ul>
+
     <!-- 📢 Anúncio -->
     <AdPlaceholder />
 
