feat: completa tabela de concursos de PE (militar médio e links)

--- a/src/pages/pe/concursos/index.astro
+++ b/src/pages/pe/concursos/index.astro
@@ -17,13 +17,14 @@ import AdPlaceholder from "@/components/AdPlaceholder.astro";
         <li><a href="/pe/concursos/nivel-superior/saude">Saúde</a></li>
         <li><a href="/pe/concursos/nivel-superior/direito">Direito</a></li>
         <li><a href="/pe/concursos/nivel-superior/qualquer-nivel-superior">Qualquer nível superior</a></li>
+        <li><a href="/pe/concursos/nivel-superior/militar">Militar</a></li>
       </ul>
     </section>
 
     <section>
       <h2>Nível Médio</h2>
       <ul>
-        <li><span>Administrativo (em breve)</span></li>
+        <li><a href="/pe/concursos/nivel-medio/militar">Militar</a></li>
         <li><span>Educação (em breve)</span></li>
         <li><span>Segurança (em breve)</span></li>
       </ul>
@@ -54,6 +55,21 @@ import AdPlaceholder from "@/components/AdPlaceholder.astro";
         </tr>
         </thead>
         <tbody>
+        <!-- Marinha – Oficiais Temporários -->
+        <tr>
+          <td>
+            <a
+                href="/pe/concursos/nivel-superior/militar/oficiais-temporarios-marinha-3dn/2025-svm-rm2"
+              >Marinha do Brasil
+            </a>
+          </td>
+          <td>
+            Oficiais Temporários (RM2)
+          </td>
+          <td>Superior</td>
+          <td>Recife/PE e outros</td>
+          <td>08/11/2025 a 08/01/2026</td>
+        </tr>
         <tr>
             <td>
             <a href="/pe/concursos/nivel-superior/educacao/professor-portugues-marinha-olinda/2025-edital-1-dpm">
@@ -78,6 +94,19 @@ import AdPlaceholder from "@/components/AdPlaceholder.astro";
           <td>Petrolina e Recife</td>
           <td>30/01/2026</td>
         </tr>
+
+        <tr>
+          <td>
+            <a href="/pe/concursos/nivel-medio/militar/aprendizes-marinheiros-marinha-pe/2026-cpaeam">
+              Marinha do Brasil
+            </a>
+          </td>
+          <td>Aprendiz-Marinheiro (CPAEAM/2026)</td>
+          <td>Médio</td>
+          <td>Pernambuco</td>
+          <td>25/02/2026</td>
+        </tr>
+
         </tbody>
     </table>
     </section>
